--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,25 @@ find_package (bio REQUIRED)
 
 add_executable (bcfdelta main.cpp)
 target_link_libraries (bcfdelta bio::bio seqan3::seqan3)
+
+########################################################
+## clang-format
+########################################################
+
+find_program(CLANG_FORMAT "clang-format-14")
+
+if (CLANG_FORMAT STREQUAL "CLANG_FORMAT-NOTFOUND")
+    find_program(CLANG_FORMAT "clang-format")
+endif()
+
+if (NOT CLANG_FORMAT STREQUAL "CLANG_FORMAT-NOTFOUND")
+    add_custom_target (check_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-name" "'*.[ch]pp'" "-maxdepth" "1" "-exec"
+                       ${CLANG_FORMAT} "-style=file" "-n" "-Werror" "{}" "+"
+                       COMMENT "Checking the app with clang-format.")
+
+    add_custom_target (do_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-name" "'*.[ch]pp'" "-maxdepth" "1" "-exec"
+                       ${CLANG_FORMAT} "-style=file" "-i" "{}" "+"
+                       COMMENT "Format the app with clang-format.")
+else ()
+    message(FATAL_ERROR "clang-format not found. No targets made.")
+endif()
