--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ if (CLANG_FORMAT STREQUAL "CLANG_FORMAT-NOTFOUND")
 endif()
 
 if (NOT CLANG_FORMAT STREQUAL "CLANG_FORMAT-NOTFOUND")
-    add_custom_target (check_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-name" "'*.[ch]pp'" "-maxdepth" "1" "-exec"
+    add_custom_target (check_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-maxdepth" "1" "-name" "'*.[ch]pp'" "-exec"
                        ${CLANG_FORMAT} "-style=file" "-n" "-Werror" "{}" "+"
                        COMMENT "Checking the app with clang-format.")
 
-    add_custom_target (do_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-name" "'*.[ch]pp'" "-maxdepth" "1" "-exec"
+    add_custom_target (do_format "find" "${CMAKE_CURRENT_SOURCE_DIR}/" "-maxdepth" "1" "-name" "'*.[ch]pp'" "-exec"
                        ${CLANG_FORMAT} "-style=file" "-i" "{}" "+"
                        COMMENT "Format the app with clang-format.")
 else ()
